--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<link rel="stylesheet" href="css/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.css/animate.min.css">
-	<link rel='stylesheet' href="css/style.css">
+	<link rel='stylesheet' href="css/application.css">
 	
 </head>
 
@@ -29,7 +29,7 @@
         	<div class="col-xs-2">
           	<img ng-src ="{{user.userData.logo}}" class="logo"/> 
         	</div>
-        	<div class="col-xs-4 name">
+        	<div class="col-xs-4">
           	<p>{{user.userData.display_name}}</p>                   
          	</div>
          	<div class="col-xs-6" id='stream'>
@@ -43,7 +43,7 @@
       	<div class="col-xs-2">
          		<img ng-src ="{{user.userData.logo}}" class="logo"/> 
       	</div>
-      	<div class="col-xs-4 name">
+      	<div class="col-xs-4">
          		<p>{{user.name}}</p>
       	</div>
       	<div class="col-xs-6" id='stream'>
@@ -57,7 +57,7 @@
        		<div class="col-xs-2">
          		<img src ="http://images.clipartpanda.com/question-mark-black-and-white-Icon-round-Question_mark.jpg" class="logo"/> 
         	</div>
-        	<div class="col-xs-4 name">
+        	<div class="col-xs-4">
          		<p>{{user.name}}</p>                   
         	</div>
         	<div class="col-xs-6" id='stream'>
