--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           	<p>{{user.userData.display_name}}</p>                   
          	</div>
          	<div class="col-xs-6" id='stream'>
-          	<a ng-href="https://www.twitch.tv/{{user.href}}" target="blank">{{user.streamData.stream.game}}: {{user.streamData.stream.channel.status}}</a>
+          	<a ng-href="https://www.twitch.tv/{{user.userData.display_name}}" target="blank">{{user.streamData.stream.game}}: {{user.streamData.stream.channel.status}}</a>
          	</div>
       </div>
         
