--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset = "utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <title>Twitch</title>
+  <link rel="icon" href="images/motorbike.png" type="images/x-icon">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel='stylesheet' href="css/application.css">
 	
