--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset = "utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Twitch</title>
-  <link rel="icon" href="images/motorbike.png">
+  <link rel="icon" href="images/motorbike.png?v=2">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel='stylesheet' href="css/application.css">
 	
